files/scss/origin.scss
/******************* attributes *******************/

.bordered {
    border: 2px solid var(--bg-lite);
    box-sizing: border-box;

    &.active {
        border-color: currentColor;

        &:hover {
            border-color: var(--bg-lite);
        }
    }
}

.with-bottom-separator {
    border-bottom: 1px solid var(--bg-lite);
    padding-bottom: 1em;
    margin-bottom: 1em;

    &.small {
        padding-bottom: 0.5em;
    }
}

.marginned {
    margin: 1em 2em;
}

.padded {
    padding: 1em 2em;

    &.small {
        padding: 0.5em 1em;
    }
}

.rounded {
    border-radius: 0.75em;
}

.shaded {
    box-shadow: 0 0.5em 0.75em var(--shadow);
}

.backdropped {
    background: var(--bg);
}

.highlightable:hover {
    background: var(--tertiary-ghost);
}

/*******/

.card {
    @extend .padded, .rounded, .backdropped, .bordered, .shaded;

    margin: 0;

    & > .header {
        @extend .flex, .right, .middle, .spread;

        flex-wrap: nowrap;

        & > .titles {
            @extend .flex, .right, .middle;

            & > [role$="icon"] {
                margin: 0;
            }

            & > [role="texts"] {
                & > * {
                    margin: 0;
                }
            }
        }
    }

    & > .contents {
        & .tile,
        & [role$="tile"],
        & .card,
        & [role$="card"] {
            box-shadow: none;
        }

        & > .bordered {
            margin-block: 0.5em;
        }
    }
}

.tile {
    @extend .padded, .rounded, .backdropped, .bordered, .shaded;

    & > * {
        flex-grow: 1;
    }

    & > [role="top-part"] {
        @extend .flex, .right, .middle;
        text-align: left;
    }
    & > [role="middle-part"] {
        @extend .flex, .right, .center, .middle;
        text-align: center;
    }
    & > [role="bottom-part"] {
        @extend .flex, .right, .middle;
        justify-content: right;
        text-align: right;

        &:not(
            header [role="bottom-part"],
            footer [role="bottom-part"]
        ) {
            @extend .but-mobile-down;
        }
    }

    .card & {
        box-shadow: none;
    }
}

/******************* theme *******************/

[role*="title"] {
    margin: 0;
}
[role*="subtitle"] {
    @extend .ghost;
}

/** specific **/
[role="actions"],
.actions {
    @extend .flex, .right, .center, .middle;
}

#app-badge {
    @extend .flex, .right, .middle;

    flex-direction: row-reverse;

    & > [role="details"] {
        @extend .flex, .down, .no-gap;

        & > * {
            margin: 0;
        }
        & > [role="app-name"] {
            font-size: 1.2em;
        }
    }
}

aside {
    @extend .flex, .down;

    & > .card {
        @extend .flex, .down, .but-mobile-right;

        max-height: calc(100vh - 4em);
        flex-wrap: nowrap;
        overflow: auto;
    }
}

body {
    @extend .full-width;

    background: radial-gradient(circle at center 200%, var(--primary) 30%, var(--bg));
    background-attachment: fixed;
}

.button {
    @extend .flex, .right, .nowrap, .center, .middle;
    @extend .padded, .small, .rounded, .interactive;
    @extend .accent, .bordered, .secondary;

    display: inline-flex;
    background: var(--bg);
    margin: 0;

    & a {
        text-decoration: none;
    }

    &[target="_blank"] {
        border-style: double;
        border-width: 5px;
    }

    &.toggle {
        border-style: dashed;
        color: var(--fg);
        --accent-color: var(--tertiary);

        &:hover {
            color: var(--tertiary);
            background: inherit;
        }

        &.active {
            border-style: solid;
            border-color: var(--accent-color);
        }
    }

    &:hover {
        @extend .background;
    }
}

.chart {
    & .value {
        @extend .rounded;
    }
}

.field-value {
    @extend .flex, .right, .middle;
}

[role="files-breadcrumbs"] {
    @extend .flex, .right, .middle;
    @extend .with-bottom-separator;

    & > [role="current-directory"] {
        @extend .accent, .primary;
    }
}

[role="files-list"] {
    @extend .flex, .right;

    & [role="file-card"] {
        @extend .flex, .down;
        @extend .bordered, .padded, .rounded;

        & > .actions {
            @extend .grid;

            --col-count: 2;
        }
    }
}

footer {
    & [role="details"] a {
        text-decoration: none;
    }
}

form, form > [role="fields"] {
    @extend .flex, .down;

    &.tight {
        max-width: 25em;
        margin-inline: auto;
    }
}

footer,
header {
    @extend .card, .tile;
}

footer {
    @extend .flex, .right, .but-mobile-down, .spread, .middle;
}

header {
    @extend .grid, .but-mobile-down, .middle;

    grid-template-columns: auto auto;

    & > [role="top-part"] {
        @extend .nowrap;
    }

    & > [role="bottom-part"] {
        display: block;

        & > * {
            margin: 0.25em;
            vertical-align: middle;
        }
    }
}

.input-container {
    @extend .grid, .but-mobile-down, .middle;
    @extend .padded, .rounded, .animatable, .bordered;

    width: 100%;
    grid-template-columns: auto 1fr;
    flex-grow: 1;
    margin: 0;

    &:has(:focus) {
        border-color: var(--primary);
    }
    &:has(:disabled) {
        border-style: dashed;
    }
    &:has([role="extra-buttons"]) {
        grid-template-columns: auto 1fr auto;
    }

    & [role="label-wrapper"] {
        @extend .flex, .right, .middle, .nowrap;

        gap: 0.25em;
    }

    & input, & textarea, & select {
        color: var(--fg);
    }

    & textarea {
        font-family: var(--mono-font);
        min-height: 3.5em;
    }

    & select {
        & option {
            font-family: inherit;
            background-color: var(--bg);
        }
    }

    & input[type="checkbox"],
    & input[type="radio"] {
        accent-color: var(--primary);
        height: 1em;
        width: 1em;
    }

    & label,
    & .icon:not(.error .icon) {
        @extend .ghost;
    }

    & > .icon {
        font-size: 1.25em;
    }
}

[role="list"] {
    @extend .flex, .down;
}

main {
    @extend .flex, .down;

    width: calc(100% - 300px);
}

#main-wrapper {
    @extend .marginned, .padded;
    @extend .flex, .down;

    margin-inline: auto;
    width: calc(100vw - 6em);
    max-width: calc(100vw - 4em);
}

#middle-wrapper {
    @extend .flex, .right, .spread, .nowrap, .but-mobile-wrap;

    width: 100%;
}

[role="model-card"] {
    @extend .tile;
    @extend .flex, .right, .but-mobile-down, .nowrap, .spread, .middle;
    @extend .animatable, .highlightable;
}

#page-title {
    @extend .flex, .down, .no-gap;

    align-items: baseline;

    & > * {
        margin: 0;
    }
}

.progress-bar {
    @extend .rounded;
}

[role="title"] {
    font-size: 1.5em;
}
[role="subtitle"] {
    font-size: 1em;
}

.section {
    @extend .card, .tile;

    & > .header {
        @extend .flex, .right, .middle, .spread;

        & > .titles {
            @extend .flex, .right, .middle;

            & > [role$="icon"] {
                margin: 0;
            }

            & > [role="texts"] {
                & > * {
                    margin: 0;
                }
            }
        }
    }
}

.stat-tile {
    @extend .tile;
}

.tag {
    @extend .rounded;

    background: var(--bg-lite);
    color: var(--black);
    font-weight: bold;
    padding: 0.25em 0.5em;
}

#toast {
    @extend .card;
    @extend .animatable;
    @extend .flex, .right, .nowrap, .middle;

    position: fixed;
    top: 1em;
    left: 50%;
    transform: translate(-50%, -5em);
    border-color: currentColor;
    z-index: 99;

    &.visible {
        transform: translate(-50%, 0);
    }

    & .content {
        font-weight: bold;
    }
}

/*********** mobile **********/

@media screen and (max-width: 550px) {
    #app-badge {
        flex-direction: column-reverse;
    }

    aside {
        width: 100%;
        position: sticky;
        top: 1em;
        z-index: 99;

        & > .card {
            justify-content: center;
            flex-wrap: wrap;
            max-height: 3.5em;
        }
    }

    footer,
    header {
        & > [role="top-part"],
        & > [role="middle-part"],
        & > [role="bottom-part"] {
            width: 100%;
            justify-content: center;
        }
    }

    header [role="bottom-part"] {
        text-align: center;
        white-space: normal;
    }

    header [role="top-part"],
    footer [role="bottom-part"] {
        @extend .but-mobile-down;

        text-align: center;
    }

    #page-title {
        text-align: center;

        & > * {
            margin-inline: auto;
        }
    }
}

